# state-shift

./: Cargo.toml  README.md  lifetime_test.rs  test.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: generic.yml  typos.yml
examples/: complex_expanded.rs  lifetime_example.rs  simple_expanded.rs  simple_lifetime.rs
misc/: complex_expanded.rs  simple_expanded.rs
src/: complex_example.rs  complex_expanded.rs  helper.rs  impl_state.rs  lib.rs  main.rs  require.rs  state_impl.rs  states.rs  switch_to.rs  type_state.rs
tests/: complex_example.rs  convoluted_example.rs  double_invocation.rs  lifetime_example.rs  simple_example.rs  simple_lifetime.rs  visibility_example.rs
