[package]
name = "state-shift"
authors = ["Ozgun Ozerk"]
version = "2.0.2"
edition = "2021"
description = "Macros for implementing Type-State-Pattern on your structs and methods"
readme = "README.md"
license = "MIT"
keywords = ["macro", "type", "state", "pattern", "type-state"]
categories = ["development-tools", "rust-patterns"]
repository = "https://github.com/ozgunozerk/state-shift"


[dependencies]
Inflector = "0.11.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }


[lib]
proc-macro = true
